unpackaged/main/default/objects/zkfedex__FedExUserPrinter__c/zkfedex__FedExUserPrinter__c.object-meta.xml
<CustomObject>
    <label>FedEx User Printer</label>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>FedEx User Printer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx User Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>