unpackaged/main/default/objects/zkfedex__FedExUserPrinter__c/fields/zkfedex__Printer__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Printer__c</fullName>
    <label>Printer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>