unpackaged/main/default/objects/zkfedex__FedExUserPrinter__c/fields/zkfedex__PrinterType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PrinterType__c</fullName>
    <label>Printer Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>