unpackaged/main/default/objects/zkfedex__FedExUserPrinter__c/fields/zkfedex__ScaleWeightUnit__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScaleWeightUnit__c</fullName>
    <label>Scale Weight Unit</label>
    <length>2</length>
    <type>Text</type>
</CustomField>