unpackaged/main/default/objects/zkfedex__FedExUserPrinter__c/fields/zkfedex__User__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FedEx_User_Printers</relationshipName>
    <type>Lookup</type>
</CustomField>